# pysylva

./: .flake8  .gitignore  .pylintrc  Makefile  Sylva.g4  Sylva.lark  SylvaLexer.g4  SylvaParser.g4  TODO.md  dev-requirements.txt  numbers.py  pyproject.toml  requirements.txt  setup.py  sylva_numbers.py
contrib/: sylva.vim
doc/: arrays.md  basics.md  cffi.md  compilation.md  decisions.md  error_handling.md  error_handling2.sy  error_handling3.sy  errors.md  grammar.txt  interfaces.md  intro.md  memory.md  modules.md  notes.md  numbers.md  pipelines.md  ranges.md  real-talk.md  strings.md  toc.md  ufcs.md  variants.md
doc/res/: header.html
doc/src/: aliases.md  aliases_and_constants.md  allocation.md  arrays.md  cffi.md  enums.md  failure_results.md  failures.md  flow_control.md  functions.md  grammar.md  implementations.md  index.md  interfaces.md  iteration.md  toc.md  (+13 more)
examples/: adder.sy  aliases.sy  error_handling.py  expr2.sy  expression.sy  hello.sy  poker_hand_eval.sy  result.sy
libc/: package.toml
libs/: base.sy  sys.sy
scripts/: sylva
std/: package.toml
stdlib/: base.sy  libc.sy  os.sy  sys.sy
sylva/: LLVMAlias.py  Sylva.lark  __init__.py  array.py  ast.py  ast_builder.py  base_lexer.py  builtins.py  c_code_gen.py  cffi.py  cfn.py  cli.py  code_block.py  code_gen.py  codegen.py  codegens.py  compiler.py  const.py  cptr.py  data_source.py  errors.py  expr.py  fn.py  iface.py  impl.py  index.py  keyword_scanner.py  lexer.py  listener.py  llvm_alias.py  location.py  lookup_expr_type_assigner.py  mod.py  module.py  module_builder.py  module_checker.py  module_loader.py  module_transformer.py  monomorphizer.py  objects.py  (+29 more)
(+67 files in other folders)
